--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.3.1",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "react": "18.0.0",
+    "react-chartjs-2": "^4.3.1",
     "react-native": "0.69.4",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-svg": "^12.4.4",
+    "react-native-svg-transformer": "^1.0.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@faker-js/faker": "^7.4.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
