--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-svg": "^12.4.4",
     "react-native-svg-transformer": "^1.0.0",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
